# GtkSharpGlareaExample

./: GTKTemplate.sln  README.md
DLLTest/: CMakeLists.txt  main.cpp
GTKTemplate/: Basic.shader  GTKTemplate.csproj  GTKTemplate.sln  MainWindow.cs  MainWindow.glade  Program.cs  WindowLearn2.glade
GTKTemplate/Properties/: launchSettings.json
GTKTemplate/Properties/PublishProfiles/: FolderProfile.pubxml
