cmake_minimum_required(VERSION 3.10)  # æŒ‡å®šCMakeçš„æœ€ä½ç‰ˆæœ¬è¦æ±? 
  
# è®¾ç½®é¡¹ç›®åç§°å’Œç‰ˆæœ? 
project(GLRender VERSION 1.0)  
  
# æ·»åŠ æºæ–‡ä»¶åˆ°é¡¹ç›®ä¸? 
add_library(GLRender SHARED main.cpp)  # SHAREDè¡¨ç¤ºç”ŸæˆåŠ¨æ€åº“  
  
# è®¾ç½®åº“çš„è¾“å‡ºåç§°ï¼ˆå¯é€‰ï¼‰  
set_target_properties(GLRender PROPERTIES OUTPUT_NAME "GLRender")  
  
# å…¶ä»–é…ç½®ï¼Œå¦‚åŒ…å«ç›®å½•ã€é“¾æ¥åº“ç­‰ï¼ˆå¦‚æœéœ€è¦ï¼‰  
# include_directories(...)  
# target_link_libraries(GLRender ...)

include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/GLEW/include
)

target_link_directories(GLRender PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/GLEW/lib/Release/x64)
find_library(MYLIB_LIBRARY NAMES glew32 PATHS ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/GLEW/lib/Release/x64 NO_DEFAULT_PATH) 
 
# ¼ì²éÊÇ·ñÕÒµ½ÁË¿â  
if(MYLIB_LIBRARY)  
  message(STATUS "Found glew32: ${MYLIB_LIBRARY}")  
else()  
  message(FATAL_ERROR "glew32 library not found")  
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})


set(GLEW
    glew32
    opengl32
)

target_link_libraries(GLRender ${GLEW})

set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/../GTKTemplate/bin/Debug/net7.0-windows7.0)
#install(TARGETS test DESTINATION bin)

message("GLEW: ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/GLEW/lib/Release/x64")

